--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 name: Sam (Ace) Mate
-theme: minima
+theme: jekyll-theme-minimal
+title: Sam (Ace) Mate
+description: "Hi, I'm Sam/Ace, a Computer Science & Game Design student at Illinois State University."
